// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render correctly with movieData 1`] = `
<ErrorBoundary>
  <div
    className="app"
  >
    <Connect(MoviePage) />
  </div>
</ErrorBoundary>
`;

exports[`App should render correctly without movieData 1`] = `
<ErrorBoundary>
  <div
    className="app"
  >
    <Connect(SearchPage) />
  </div>
</ErrorBoundary>
`;
